--- a/website.css
+++ b/website.css
@@ -1,6 +1,19 @@
-title {
+#title {
   color: #870b00;
-  font-size: 30px;
+  font-size: 50px;
   font-family: Trebuchet MS;
-  margin: 20px 10px 20px 10px;
+  text-align: center;
+}
+
+p {
+  font-size: 15px;
+}
+
+img {
+  display: block;
+  margin: auto;
+}
+
+h1, h2, h3, p {
+  text-align: center;
 }
